tests/specs/ecosystem/thesgj/nextjs_toploader/1_6_9_canary_0.test
thesgj/nextjs-toploader/1.6.9-canary.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'JSX'.
 */ const NextTopLoader = ({}: NextTopLoaderProps): JSX.Element =>({} as never);
                                                    ~~~
    at file://<tmpdir>/src/index.tsx:62:53

